fix models relations

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,6 +12,7 @@
     {% for post in posts %}
     <a href="{% url 'blog:post_detail' post.id %}">{{post.title}}</a>
     <br>
+    <h4>{{ post.author.profile.address }}</h4>
     <a href="{% url 'blog:post_edit' post.id %}">
         <h5>Edit</h5>
     </a>
@@ -19,7 +20,7 @@
         <h5>Delete</h5>
     </a>
     <br>
-    <h4>{{ post.datetime_created }}</h3>
+    <h4>{{ post.datetime_created }}</h4>
     <br>
     {% endfor %}
 
